more detailed broker api models
